[package]
name = "web-grep"
version = "0.1.0"
authors = ["cympfh <cympfh@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Grep Tool for HTML or XML"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
easy-scraper = "0.1"
